Fix carousel dots flickering

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -188,6 +188,7 @@ body {
 
 .carousel_nav {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-top: 0.15rem;
 
